# piw

./: .gitignore  .zenodo.json  CITATION.cff  README.md  pyproject.toml
piw/: __init__.py  abstract_plot.py  callbacks.py  layout.py  styles.py  template.py  webapp.py
piw/assets/: bootstrap.css  piw.css  piw_base.css  piw_specific.css
