[tool.poetry]
name = "piw"
description = "PIK Interactive Webapp Library"
version = "0.2.0"
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.11.0"
dash-bootstrap-components = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
