[tool.poetry]
name = "piw"
description = "PIK Interactive Webapp Library"
version = "0.7.1"
authors = ["Philipp Verpoort <philipp.verpoort@pik-potsdam.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dash = "^2.14.0"
dash-bootstrap-components = "^1.5.0"
pyyaml = "^6.0.1"

[tool.poetry.group.bootstrap.dependencies]
libsass = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
